# api/vgsocket/gen-server/restapi/operations/get_brigade_activity_responses.go
@@ -1,0 +1,222 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/vpngen/dc-mgmt/api/vgsocket/gen-server/models"
+)
+
+// GetBrigadeActivityOKCode is the HTTP code returned for type GetBrigadeActivityOK
+const GetBrigadeActivityOKCode int = 200
+
+/*
+GetBrigadeActivityOK OK
+
+swagger:response getBrigadeActivityOK
+*/
+type GetBrigadeActivityOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.BrigadeActivity `json:"body,omitempty"`
+}
+
+// NewGetBrigadeActivityOK creates GetBrigadeActivityOK with default headers values
+func NewGetBrigadeActivityOK() *GetBrigadeActivityOK {
+
+	return &GetBrigadeActivityOK{}
+}
+
+// WithPayload adds the payload to the get brigade activity o k response
+func (o *GetBrigadeActivityOK) WithPayload(payload models.BrigadeActivity) *GetBrigadeActivityOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get brigade activity o k response
+func (o *GetBrigadeActivityOK) SetPayload(payload models.BrigadeActivity) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetBrigadeActivityOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty map
+		payload = models.BrigadeActivity{}
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetBrigadeActivityBadRequestCode is the HTTP code returned for type GetBrigadeActivityBadRequest
+const GetBrigadeActivityBadRequestCode int = 400
+
+/*
+GetBrigadeActivityBadRequest Bad Request
+
+swagger:response getBrigadeActivityBadRequest
+*/
+type GetBrigadeActivityBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetBrigadeActivityBadRequest creates GetBrigadeActivityBadRequest with default headers values
+func NewGetBrigadeActivityBadRequest() *GetBrigadeActivityBadRequest {
+
+	return &GetBrigadeActivityBadRequest{}
+}
+
+// WithPayload adds the payload to the get brigade activity bad request response
+func (o *GetBrigadeActivityBadRequest) WithPayload(payload *models.Error) *GetBrigadeActivityBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get brigade activity bad request response
+func (o *GetBrigadeActivityBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetBrigadeActivityBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetBrigadeActivityUnauthorizedCode is the HTTP code returned for type GetBrigadeActivityUnauthorized
+const GetBrigadeActivityUnauthorizedCode int = 401
+
+/*
+GetBrigadeActivityUnauthorized Unauthorized
+
+swagger:response getBrigadeActivityUnauthorized
+*/
+type GetBrigadeActivityUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetBrigadeActivityUnauthorized creates GetBrigadeActivityUnauthorized with default headers values
+func NewGetBrigadeActivityUnauthorized() *GetBrigadeActivityUnauthorized {
+
+	return &GetBrigadeActivityUnauthorized{}
+}
+
+// WithPayload adds the payload to the get brigade activity unauthorized response
+func (o *GetBrigadeActivityUnauthorized) WithPayload(payload *models.Error) *GetBrigadeActivityUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get brigade activity unauthorized response
+func (o *GetBrigadeActivityUnauthorized) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetBrigadeActivityUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetBrigadeActivityInternalServerErrorCode is the HTTP code returned for type GetBrigadeActivityInternalServerError
+const GetBrigadeActivityInternalServerErrorCode int = 500
+
+/*
+GetBrigadeActivityInternalServerError Internal Server Error
+
+swagger:response getBrigadeActivityInternalServerError
+*/
+type GetBrigadeActivityInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetBrigadeActivityInternalServerError creates GetBrigadeActivityInternalServerError with default headers values
+func NewGetBrigadeActivityInternalServerError() *GetBrigadeActivityInternalServerError {
+
+	return &GetBrigadeActivityInternalServerError{}
+}
+
+// WithPayload adds the payload to the get brigade activity internal server error response
+func (o *GetBrigadeActivityInternalServerError) WithPayload(payload *models.Error) *GetBrigadeActivityInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get brigade activity internal server error response
+func (o *GetBrigadeActivityInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetBrigadeActivityInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetBrigadeActivityServiceUnavailableCode is the HTTP code returned for type GetBrigadeActivityServiceUnavailable
+const GetBrigadeActivityServiceUnavailableCode int = 503
+
+/*
+GetBrigadeActivityServiceUnavailable Service Temporarily Unavailable
+
+swagger:response getBrigadeActivityServiceUnavailable
+*/
+type GetBrigadeActivityServiceUnavailable struct {
+}
+
+// NewGetBrigadeActivityServiceUnavailable creates GetBrigadeActivityServiceUnavailable with default headers values
+func NewGetBrigadeActivityServiceUnavailable() *GetBrigadeActivityServiceUnavailable {
+
+	return &GetBrigadeActivityServiceUnavailable{}
+}
+
+// WriteResponse to the client
+func (o *GetBrigadeActivityServiceUnavailable) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(503)
+}
