# api/vgsocket/swagger.yaml
@@ -103,6 +103,82 @@ paths:
           schema:
             $ref: '#/definitions/ServiceTemporarilyUnavailable'
 
+  /brigade/{brigade_id}/slots:
+
+    get:
+      security:
+        - JWT:
+          - manager
+      summary: Get VPN socket brigade slots stats
+      operationId: getBrigadeSlots
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: brigade_id
+          required: true
+          type: string
+          description: Brigade ID
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: "#/definitions/BrigadeSlots"
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Error'
+        "503":
+          description: Service Temporarily Unavailable
+
+  /brigade/{brigade_id}/activity:
+
+    get:
+      security:
+        - JWT:
+          - manager
+      summary: Get VPN socket brigade activity stats
+      operationId: getBrigadeActivity
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: brigade_id
+          required: true
+          type: string
+          description: Brigade ID
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: "#/definitions/BrigadeActivity"
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Error'
+        "503":
+          description: Service Temporarily Unavailable
+
 definitions:
   
   Error:
@@ -219,6 +295,35 @@ definitions:
         description: Brigade ID
       config_type:
         $ref: '#/definitions/ConfigType'
+
+  BrigadeSlots:
+    type: object
+    required:
+      - free_slots
+      - total_slots
+    properties:
+      free_slots:
+        type: integer
+      total_slots:
+        type: integer
+
+  BrigadeActivity:
+    type: object
+    additionalProperties:
+      $ref: '#/definitions/AcitivityData'
+
+  AcitivityData:
+    type: object
+    required:
+      - last_seen
+      - updated
+    properties:
+      last_seen:
+        type: string
+        format: date-time
+      updated:
+        type: string
+        format: date-time
 
   Principal:
     type: object
